[gd_scene load_steps=6 format=3 uid="uid://bj5fseg1w720p"]

[ext_resource type="Script" path="res://scenes/four_way.gd" id="1_dfuqi"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="1_u3ryg"]
[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="2_g3h7f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uqmf"]
size = Vector2(20, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p588m"]
size = Vector2(76, 20)

[node name="four_way" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_dfuqi")

[node name="TileMap" parent="." instance=ExtResource("2_g3h7f")]
layer_0/tile_data = PackedInt32Array(2752577, 5, 1, 2687041, 393221, 2, 2621505, 393221, 0, 2555969, 65541, 1, 2555971, 65541, 1, 2621507, 393221, 0, 2621506, 393221, 0, 2687042, 393221, 2, 2752578, 65541, 1, 2687043, 393221, 2, 2555970, 131077, 1, 2752575, 65541, 0, 2687039, 393221, 2, 2621503, 393221, 0, 2555967, 5, 0, 2490431, 65541, 1, 2555968, 5, 2, 2621504, 393221, 0, 2687040, 393221, 2, 2752576, 65541, 1, 2687038, 393221, 4, 2621502, 393221, 3, 2555966, 458757, 1, 2490430, 458757, 1, 2621509, 393221, 0, 2621508, 393221, 0, 2687045, 393221, 2, 2687044, 393221, 2, 2621501, 327685, 3, 2687037, 327685, 4, 2621500, 393221, 0, 2621499, 393221, 0, 2621498, 393221, 0, 2621497, 393221, 0, 2687036, 393221, 2, 2687035, 393221, 2, 2687034, 393221, 2, 2687033, 393221, 2, 2752573, 327685, 1, 2818109, 327685, 1, 2883645, 327685, 1, 2752574, 458757, 1, 2818110, 458757, 1, 2883646, 458757, 1, 2555965, 327685, 1, 2490429, 327685, 1, 2424893, 327685, 1, 2424894, 458757, 1, 2555972, 5, 0, 2555973, 65541, 1, 2555964, 65541, 2, 2555963, 65541, 1, 2555962, 65541, 0, 2555961, 5, 1, 2752572, 65541, 1, 2752571, 131077, 2, 2752570, 65541, 1, 2752569, 131077, 2, 2752579, 131077, 0, 2752580, 65541, 1, 2752581, 65541, 1, 2818111, 65541, 1, 2883647, 65541, 1, 2818108, 65541, 1, 2883644, 65541, 1, 2490428, 65541, 1, 2424892, 65541, 2, 2424895, 131077, 1)
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(2490437, 65539, 1, 2490436, 65539, 1, 2424900, 3, 0, 2424898, 3, 0, 2424899, 3, 0, 2424901, 3, 0, 2424897, 3, 0, 2424896, 3, 0, 2490425, 65539, 1, 2490426, 65539, 1, 2490427, 65539, 1, 2490432, 65539, 1, 2490433, 65539, 1, 2490434, 65539, 1, 2490435, 65539, 1, 2424891, 3, 0, 2424890, 3, 0, 2424889, 3, 0)
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2424900, 393219, 2, 2424898, 393219, 2, 2424899, 393219, 2, 2424901, 393219, 2, 2424897, 393219, 2, 2424896, 393219, 2, 2424891, 393219, 2, 2424890, 393219, 2, 2424889, 393219, 2, 2752569, 393219, 0, 2818105, 393219, 1, 2883641, 393219, 1, 2752570, 393219, 0, 2818106, 393219, 1, 2883642, 393219, 1, 2752571, 393219, 0, 2818107, 393219, 1, 2883643, 393219, 1, 2424892, 458755, 2, 2752572, 458755, 0, 2818108, 458755, 1, 2883644, 458755, 1, 2424895, 327683, 2, 2752575, 327683, 0, 2818111, 327683, 1, 2883647, 327683, 1, 2752576, 393219, 0, 2818112, 393219, 1, 2883648, 393219, 1, 2752577, 393219, 0, 2818113, 393219, 1, 2883649, 393219, 1, 2752578, 393219, 0, 2818114, 393219, 1, 2883650, 393219, 1, 2752579, 393219, 0, 2818115, 393219, 1, 2883651, 393219, 1, 2752580, 393219, 0, 2818116, 393219, 1, 2883652, 393219, 1, 2752581, 393219, 0, 2818117, 393219, 1, 2883653, 393219, 1)
layer_3/tile_data = PackedInt32Array()
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2555961, 393241, 2, 2555962, 393241, 2, 2555963, 393241, 2, 2555964, 458777, 2, 2490428, 458777, 1, 2424892, 458777, 1, 2555968, 393241, 2, 2555969, 393241, 2, 2555970, 393241, 2, 2555971, 393241, 2, 2555972, 393241, 2, 2555973, 393241, 2, 2490437, 393241, 1, 2490436, 393241, 1, 2490435, 393241, 1, 2490434, 393241, 1, 2490433, 393241, 1, 2490432, 393241, 1, 2424896, 393241, 1, 2424897, 393241, 1, 2424898, 393241, 1, 2424899, 393241, 1, 2424900, 393241, 1, 2424901, 393241, 1, 2490427, 393241, 1, 2490426, 393241, 1, 2490425, 393241, 1, 2424889, 393241, 1, 2424890, 393241, 1, 2424891, 393241, 1, 2818107, 393241, 1, 2424895, 327705, 1, 2490431, 327705, 1, 2555967, 327705, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Christina" parent="." instance=ExtResource("1_u3ryg")]
position = Vector2(956, 521)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 793
limit_top = 508
limit_right = 1209
limit_bottom = 764
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="main_camp_transition_point" type="Area2D" parent="."]
position = Vector2(1219, 667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_camp_transition_point"]
position = Vector2(0, -42.5)
shape = SubResource("RectangleShape2D_7uqmf")

[node name="lake_transit_point" type="Area2D" parent="."]
position = Vector2(927, 498)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lake_transit_point"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_p588m")

[connection signal="body_entered" from="main_camp_transition_point" to="." method="_on_main_camp_transition_point_body_entered"]
[connection signal="body_exited" from="main_camp_transition_point" to="." method="_on_main_camp_transition_point_body_exited"]
[connection signal="body_entered" from="lake_transit_point" to="." method="_on_lake_transit_point_body_entered"]
[connection signal="body_exited" from="lake_transit_point" to="." method="_on_lake_transit_point_body_exited"]
